meetup: add reference to slides in 2507-dlh.md

--- a/src/content/meetup/2507-dlh.md
+++ b/src/content/meetup/2507-dlh.md
@@ -13,6 +13,7 @@ talks:
     description: "The classical computer has drastically changed our everyday personal and professional lives by utilising only the consequences of collective quantum mechanical properties (from an eagle's perspective). The concept of quantum computation and communication, on the other hand, is based on the properties of quantum particles for direct information processing. In this talk, we delve into foundational principles of quantum particles, superposition and entanglement, which redefine classical notions of computation and information. After understanding the key properties of quantum particles, we look at promising algorithms and communication protocols."
     bio: 'Julia is a theoretical physicist specializing in quantum networks and quantum communication. Her research focuses on the development of quantum network protocols tailored to the unique features and challenges, particularly noise and interaction with the environment, arising from quantum states. Apart from physics, she has a keen interest in classical information technology since her youth.'
     linkedin: 'juliafreund'
+    slides: '2507-julia-freund_quantum-information.pdf'
   - avatar: './images/speaker/2507-annika_verena.png'
     name: 'Annika Reiff & Verena Lemberger'
     title: 'Talk Nerdy to Me: Mapping Mornings and Asking the Right Questions'
@@ -23,6 +24,7 @@ She moves between tech and business like a translator, bridge-builder – or, le
     linkedin:
       - 'annika-reiff-1a5b25129'
       - 'verena-lemberger'
+    slides: '2507-annika-verena_talk_nerdy_to_me.pdf'
 eventId: '1s85ag7jklh7bk2tkvunibiv76'
 participants:
   registered: 66
