Added location info for next meetup

--- a/src/content/meetup/2601-htl.md
+++ b/src/content/meetup/2601-htl.md
@@ -1,10 +1,10 @@
 ---
 date: 2026-01-15T18:30:00+01:00
 location:
-  name: '???'
-  address: '???, 6020 Innsbruck'
-  url: ''
-  logo: ''
+  name: 'HTL Bau Informatik Design'
+  address: 'Trenkwalderstraße 2, 6020 Innsbruck'
+  url: 'https://www.htl-ibk.at'
+  logo: './images/location/htl.png'
 talks:
   - avatar: './images/speaker/avatar.png'
     name: ''
