--- a/src/content/meetup/2601-htl.md
+++ b/src/content/meetup/2601-htl.md
@@ -6,15 +6,17 @@ location:
   url: 'https://www.htl-ibk.at'
   logo: './images/location/htl.png'
 talks:
-  - avatar: './images/speaker/avatar.png'
-    name: ''
-    title: 'tba'
-    description: ''
-    bio: ''
-  - avatar: './images/speaker/avatar.png'
-    name: ''
-    title: 'tba'
-    description: ''
-    bio: ''
+  - avatar: './images/speaker/2601-chris.jpg'
+    name: 'Christopher Siller'
+    title: 'MCP: The USB-C Port for AI Agents'
+    description: 'AI is evolving from passive text completion to active agency, but the integration of tools and data suffers from a lack of standardization. We talk about autonomous agents while relying on an inefficient patchwork of custom-built wrappers for every database or local file we want a model to access. This talk introduces the Model Context Protocol (MCP) as the "USB-C port for AI applications" — an open-source standard designed to solve this integration bottleneck. We will break down the Host-Client-Server architecture and show how MCP decouples models from specific data sources, providing a standardized way to connect agents to files, tools, and workflows. We will examine why this protocol is essential for interoperability, security, and conclude with a critical assessment of whether MCP can truly deliver on the promise of vendor-neutral AI tooling.'
+    bio: 'Chris is a ML engineer, specializing in agentic workflows, data platform- and AI agent-architecture at enterprise scale. He is a clean-code enthusiast with a special interest in reinforcement learning and deep learning. When Off-Duty, Chris also enjoys navigating complex environments, mitigating hallucinations, and preserving operational context while climbing and running.'
+    github: https://github.com/ChriSil
+    linkedin: https://www.linkedin.com/in/christophersiller
+  - avatar: './images/speaker/2406-danielle.jpg'
+    name: 'Danielle McKenney'
+    title: 'The AI Act: A Brief Overview and Critique'
+    description: "In 2024, the EU approved the world's first large scale attempt to regulate \"AI\". What were the goals behind this innovative piece of legislation? Were they reached in a meaningful way? How do we even define \"AI\" from a legal perspective anyway? In my talk, I will offer insight into the content of the EU's AI Act, share my thoughts on why it is important to regulate many emerging technologies, and discuss where the AI Act succeeds and fails (miserably)."
+    bio: "Danielle is a Data Scientist at Swarovski Optik, where she also contributes to compliance with the AI Act. Although she enjoys the mathematical side of machine learning, her primary interest lies in its ethical and human aspects, as well as its regulation."
 eventId: '02lu79044jecdl37i15evh68mi'
 ---
