--- a/src/content/meetup/2601-htl.md
+++ b/src/content/meetup/2601-htl.md
@@ -18,6 +18,7 @@ talks:
     title: 'The AI Act: A Brief Overview and Critique'
     description: 'In 2024, the EU approved the world''s first large scale attempt to regulate "AI". What were the goals behind this innovative piece of legislation? Were they reached in a meaningful way? How do we even define "AI" from a legal perspective anyway? In my talk, I will offer insight into the content of the EU''s AI Act, share my thoughts on why it is important to regulate many emerging technologies, and discuss where the AI Act succeeds and fails (miserably).'
     bio: 'Danielle is a Data Scientist at Swarovski Optik, where she also contributes to compliance with the AI Act. Although she enjoys the mathematical side of machine learning, her primary interest lies in its ethical and human aspects, as well as its regulation.'
+    slides: '2601-daniella-aiact.pdf'
 eventId: '02lu79044jecdl37i15evh68mi'
 speakers:
   female: 1
