--- a/src/content/meetup/2601-htl.md
+++ b/src/content/meetup/2601-htl.md
@@ -13,12 +13,13 @@ talks:
     bio: 'Chris is a ML engineer, specializing in agentic workflows, data platform- and AI agent-architecture at enterprise scale. He is a clean-code enthusiast with a special interest in reinforcement learning and deep learning. When Off-Duty, Chris also enjoys navigating complex environments, mitigating hallucinations, and preserving operational context while climbing and running.'
     github: https://github.com/ChriSil
     linkedin: https://www.linkedin.com/in/christophersiller
+    slides: '2601-chris-mcp.pdf'
   - avatar: './images/speaker/2406-danielle.jpg'
     name: 'Danielle McKenney'
     title: 'The AI Act: A Brief Overview and Critique'
     description: 'In 2024, the EU approved the world''s first large scale attempt to regulate "AI". What were the goals behind this innovative piece of legislation? Were they reached in a meaningful way? How do we even define "AI" from a legal perspective anyway? In my talk, I will offer insight into the content of the EU''s AI Act, share my thoughts on why it is important to regulate many emerging technologies, and discuss where the AI Act succeeds and fails (miserably).'
     bio: 'Danielle is a Data Scientist at Swarovski Optik, where she also contributes to compliance with the AI Act. Although she enjoys the mathematical side of machine learning, her primary interest lies in its ethical and human aspects, as well as its regulation.'
-    slides: '2601-daniella-aiact.pdf'
+    slides: '2601-danielle-aiact.pdf'
 eventId: '02lu79044jecdl37i15evh68mi'
 speakers:
   female: 1
