add speaker details and image for Matthias

--- a/src/content/meetup-alps/2603.md
+++ b/src/content/meetup-alps/2603.md
@@ -6,11 +6,14 @@ location:
   url: ''
   logo: ''
 talks:
-  - avatar: './images/speaker/avatar.png'
-    name: ''
-    title: 'tba'
-    description: ''
-    bio: ''
+  - avatar: './images/speaker/2603-matthias.jpg'
+    name: 'Matthias Seehauser'
+    title: 'When Code Moves Metal: An Introduction to PLCs for Software Engineers'
+    description: 'What is the difference between writing code for a server and code for a factory machine? In this talk, we explore the fundamentals of Programmable Logic Controllers (PLCs). From the historical shift away from hard-wiring to the strict requirements of real-time processing, we will examine how PLCs differ from standard IT systems. We will also discuss why the industry relies on specialized hardware over generic microcontrollers and how modern software engineering is finally finding its way onto the factory floor.'
+    bio: "20+ years in Automation he has navigated the entire stack from PLCs and Robotics to Motion Control. Originally an electronics engineer turned software developer, he also holds a Master's in Mechatronics. He bridges the gap between traditional mechanical engineering and modern software development. At Zeugwerk, the mission is to bring modern software engineering to the automation industry - providing tools for faster development, consulting on clean software architecture, and also working on real automation projects with partners to stay practical."
+    linkedin: seesle
+    bluesky: https://bsky.app/profile/seehma.at
+    website: https://zeugwerk.at
   - avatar: './images/speaker/avatar.png'
     name: ''
     title: 'tba'
