Meetup Rhine-Ruhr: Add statistics for 2602-check24

--- a/src/content/meetup-rhine-ruhr/2602-check24.md
+++ b/src/content/meetup-rhine-ruhr/2602-check24.md
@@ -24,4 +24,14 @@ Das hier ist kein Make-Everything-Ok-Button. Das sind Nächte mit Red Bull und b
 Als engagierter YouTuber und Redner teilt Roland sein umfassendes Wissen und seine Begeisterung für hochwertige Software und psychische Gesundheit. Seine persönliche Erfahrung mit einem Nervenzusammenbruch motiviert ihn, sich unermüdlich für bessere Arbeitsbedingungen im IT-Sektor einzusetzen.
 
 Als waschechter Ruhrpott Liebhaber aus Duisburg lässt Roland den einzigartigen Charakter seiner Region in seine Arbeit einfließen. Community, Kumpels, Open Source und echte Worte.'
+participants:
+  registered: 83
+  present:
+    total: 51
+    male: 49
+    female: 2
+  newParticipants: 20
+speakers:
+  female: 0
+  male: 2
 ---
