Meetup Rhine-Ruhr: Add statistics and speaker information from February meetup

--- a/src/content/meetup-rhine-ruhr/2602-check24.md
+++ b/src/content/meetup-rhine-ruhr/2602-check24.md
@@ -12,6 +12,7 @@ talks:
     language: en
     description: 'Running software is a black box. Observability is how you shine a light inside. This talk covers OpenTelemetry from instrumentation to the Collector, showing how to build visibility that helps developers and ops teams alike.'
     bio: 'Jens is a Dev turned DevOps. So he remembers what it is like to debug production issues with nothing but sparse logs and prayers. Now he builds observability systems that give his teams actual visibility into their software.'
+    linkedin: 'https://www.linkedin.com/in/jens-a-4508a127b/'
   - avatar: './images/speaker/2602-roland-golla.png'
     name: 'Roland Golla'
     title: 'Dead Internet Theory: A Practical Guide'
@@ -24,6 +25,13 @@ Das hier ist kein Make-Everything-Ok-Button. Das sind Nächte mit Red Bull und b
 Als engagierter YouTuber und Redner teilt Roland sein umfassendes Wissen und seine Begeisterung für hochwertige Software und psychische Gesundheit. Seine persönliche Erfahrung mit einem Nervenzusammenbruch motiviert ihn, sich unermüdlich für bessere Arbeitsbedingungen im IT-Sektor einzusetzen.
 
 Als waschechter Ruhrpott Liebhaber aus Duisburg lässt Roland den einzigartigen Charakter seiner Region in seine Arbeit einfließen. Community, Kumpels, Open Source und echte Worte.'
+    github: 'rogoit'
+    x: 'nevercodealone'
+    linkedin: 'rolandgolla'
+    instagram: 'https://www.instagram.com/nevercodealone/'
+    youtube: 'https://www.youtube.com/c/NeverCodeAlone'
+    website: 'https://nevercodealone.de/'
+    slides: '2602-roland-golla.pdf'
 participants:
   registered: 83
   present:
